Validate examples, remove main role

--- a/examples/radio/radio.html
+++ b/examples/radio/radio.html
@@ -10,7 +10,7 @@
     <script src="js/radio.js" type="text/javascript"></script>
   </head>
   <body>
-    <main role="main">
+    <main>
       <h1>ARIA <code>radiogroup</code> and <code>radio</code> Example</h1>
 
       <p> <a href="../../aria-practices.html#h-radiobutton">Authoring Practice Design Patten for Radio Group</a></p>
@@ -108,11 +108,12 @@
             <td>aria-checked</td>
             <td>
                 <ul>
-                  <lI>Indicate state of radio: </lI>
+                  <li>Indicate state of radio:
                     <ul>
                       <li>Checked  (e.g. aria-checked=true) </li>
                       <li>Unchecked  (e.g. aria-checked=false)</li>
                     </ul>
+                  </li>
                 </ul>
             </td>
           </tr>
@@ -145,6 +146,6 @@
         sourceCode.add('sc1', 'example')
         sourceCode.make()
       </script>
-
+    </main>
   </body>
   </html>
