Format editors list in a sane way.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -44,39 +44,51 @@
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2012-02-21",
 
-          // editors, add as many as you like
-          // only "name" is required
-          editors:  [
-              { name: "Matt King", 
+          // Editors, add as many as you like.
+          // “name” is the only required field.
+          editors: [
+            {
+              name: "Matt King",
               mailto: "mck@fb.com",
-                  company: "Facebook", companyURI:
-                  "http://www.facebook.com/" },
-              { name: "James Nurthen", 
+              company: "Facebook",
+              companyURI: "http://www.facebook.com/"
+            },
+            {
+              name: "James Nurthen",
               mailto: "james.nurthen@oracle.com",
-                  company: "Oracle Corporation", companyURI:
-                  "http://www.oracle.com/" },
-              { name: "Michael Cooper", url: 'http://www.w3.org/People/cooper/',
+              company: "Oracle Corporation",
+              companyURI: "http://www.oracle.com/"
+            },
+            {
+              name: "Michael Cooper",
+              url: 'http://www.w3.org/People/cooper/',
               mailto: "cooper@w3.org",
-                  company: "W3C", companyURI:
-                  "http://www.w3.org/" },
-              { name: "Michiel Bijl",
-                  company: "Invited Expert" },
-        { name: "Joseph Scheuhammer",
-          company: "Inclusive Design Research Centre, OCAD University",
-          companyURI: "http://idrc.ocad.ca/", 
-          note: "Previous Editor"
-        },
-        { name: "Lisa Pappas",
-          company: "SAS",
-          companyURI: "http://www.sas.com/", 
-          note: "Previous Editor"
-        },
-        { name: "Rich Schwerdtfeger",
-          company: "IBM Corporation",
-          companyURI: "http://ibm.com/", 
-          note: "Previous Editor"
-        },
-              ],
+              company: "W3C",
+              companyURI: "http://www.w3.org/"
+            },
+            {
+              name: "Michiel Bijl",
+              company: "Invited Expert"
+            },
+            {
+              name: "Joseph Scheuhammer",
+              company: "Inclusive Design Research Centre, OCAD University",
+              companyURI: "http://idrc.ocad.ca/",
+              note: "Previous Editor"
+            },
+            {
+              name: "Lisa Pappas",
+              company: "SAS",
+              companyURI: "http://www.sas.com/",
+              note: "Previous Editor"
+            },
+            {
+              name: "Rich Schwerdtfeger",
+              company: "IBM Corporation",
+              companyURI: "http://ibm.com/",
+              note: "Previous Editor"
+            },
+          ],
 
           // authors, add as many as you like. 
           // This is optional, uncomment if you have authors as well as editors.
