--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1816,7 +1816,7 @@ This is because browser accessibility APIs do not support child elements contain
                       </li>
                       <li>Non-Modal behavior
                         <ul>
-                          <li>Moves input focus to the next tab-able element in the tabbing order if the following applies:
+                          <li>Moves input focus to the next tabbable element in the tabbing order if the following applies:
                             <ul>
                               <li>Popup Help is posted. </li>
                               <li>It contains no tab navigable elements in it. </li>
