--- a/aria-practices.html
+++ b/aria-practices.html
@@ -798,6 +798,12 @@
               </p>
               <ul>
                 <li>
+                  <a href="examples/checkbox/checkbox-1.html">Checkbox role example</a>
+                </li>
+                <li>
+                  <a href="examples/checkbox/checkbox-2.html">Checkbox role example within a group</a>
+                </li>
+                <li>
                   Examples that use images to depict the state of the checkbox.
                   The images have <code>role=&quot;<a href="#presentation" class="role-reference">presentation</a>&quot;</code> to remove them from the accessibility tree.
                   <ul>
@@ -1912,6 +1918,9 @@ This is because browser accessibility APIs do not support child elements contain
           <td class="widget-example">
           <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG taskforce is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
           <ul>
+            <li>
+              <a href="examples/radio/radio.html">Radio role example</a>
+            </li>
             <li> <a href="http://www.oaa-accessibility.org/examplep/radio1/" title="Radiogroup" target="_blank" rel="nofollow">Open Ajax Alliance Radio button group</a></li>
             <li> <a href="http://www.oaa-accessibility.org/examplep/radio2/" title="Radiogroup: aria-activedescendant" target="_blank" rel="nofollow">Open Ajax Alliance Radio group using aria-activedescendant</a></li>
             <li> <a href="http://www.oaa-accessibility.org/examplep/radio3/" title="Radiogroup: Background Images" target="_blank" rel="nofollow">Open Ajax Alliance Radio button group using background images</a></li>
