On branch apg-toolbar, modified:   aria-practices.html: revised the ARIA properties section of the toolbar pattern as specified in bugzilla Bug 29391.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2421,9 +2421,7 @@ This is because browser accessibility APIs do not support child elements contain
           <td class="widget-aria">
             <ul>
               <li>The element has the role <a class="role-reference" href="#toolbar">toolbar</a>.  </li>
-              <li>The children of the toolbar are frequently elements with role <a class="role-reference" href="#button">button</a>. </li>
-              <li>Other tools that are common within toolbars are <a class="role-reference" href="#combobox">combobox</a>es and pull-down <a href="#menu" class="role-reference">menu</a>s. </li>
-              <li>It is recommended that a toolbar is labelled using  <a href="#aria-label" class="property-reference">aria-label</a>. </li>
+              <li>Labeling with <a href="#aria-label" class="property-reference">aria-label</a> is recommended, especially if the user interface includes multiple toolbars. </li>
             </ul>
           </td>
         </tr>
