Change based on 3/7/2016 meeting

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2362,7 +2362,7 @@ This is because browser accessibility APIs do not support child elements contain
                   <li>The content panel uses the role <a class="role-reference" href="#tabpanel">tabpanel</a>. </li>
                   <li>An element with role <a class="role-reference" href="#tab">tab</a> is used as a grouping label, providing a link for selecting the tabpanel to be rendered to the user. </li>
                   <li>Assign the <a href="#aria-controls" class="property-reference">aria-controls</a> relationship of a tab to the ID of its tabpanel. </li>
-                  <li>Authors manage the selected state of each tab by maintaining its <a href="#aria-selected" class="state-reference">aria-selected</a> state. </li>
+                  <li>Authors manage which tab is active by maintaining its <a href="#aria-selected" class="state-reference">aria-selected</a> state. </li>
                   <li>A <a class="role-reference" href="#tablist">tablist</a> is the container role for a set of elements with the role attribute set to <a class="role-reference" href="#tab">tab</a>. </li>
                 </ul></td>
             </tr>
