--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2567,15 +2567,13 @@ Characteristics:
         <tr>
           <th class="widget-keyboard-head" scope="row">Keyboard Interaction: </th>
           <td class="widget-keyboard">
-                      <p>General behavior for tree views follows:</p>
              <ul>
                 <li>On first load of the tree component, the top level node is in the tab order. </li>
               <li>One and only one node of the tree component is in the tab order of the page at any time. </li>
               <li>The last visited node in the tree control is retained in the tab order when the user navigates away from the tree control. </li>    
              <li>Arrowing
                 to an item with the keyboard will
-                focus and select the node. Any previous selections are cleared </li></ul>
-                <ul>              
+                focus and select the node. Any previous selections are cleared </li>
           
               <li> <kbd>Up Arrow</kbd> and <kbd>Down arrow</kbd> keys move between visible nodes. </li>
             <li> <kbd>Left arrow</kbd> key on an expanded node closes the node. </li>
