--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2158,15 +2158,11 @@ This is because browser accessibility APIs do not support child elements contain
           <tr>
             <th class="widget-example-head" scope="row">Example: </th>
             <td class="widget-example">
-            <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
             <ul>
-              <li><a href="examples/slider/slider-1.html">Horizontal Silder Examples (e.g. color picker)</a></li>
+              <li><a href="examples/slider/slider-1.html">Horizontal Slider Examples (e.g. color picker)</a></li>
               <li><a href="examples/slider/slider-2.html">Vertical and Text Slider Examples (e.g. Thermostat Controls)</a></li>
-              <li><a href="http://www.oaa-accessibility.org/examplep/slider1/" title="Slider" target="_blank" rel="nofollow">Open Ajax Alliance Sliders</a></li>
-              <li><a href="http://mindtrove.info/creating-an-accessible-internationalized-dojo-rating-widget/" title="Creating an Accessible Dojo Rating Widget" target="_blank" rel="nofollow">MINDTROVE Rating Widget</a></li>
-              <li><a href="http://files.paciellogroup.com/blogmisc/samples/aria/slider/" title="Aria Slider Examples" target="_blank" rel="nofollow">Paciello Group slider</a></li>
             </ul>
-            <p>Please note that not all examples work in all browser and version combinations. For example, note the compatibility statement.</p></td>
+            </td>
           </tr>
         </tbody>
       </table>
