--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2129,19 +2129,22 @@ This is because browser accessibility APIs do not support child elements contain
         <tbody>
           <tr>
             <th class="widget-description-head" scope="row">Description: </th>
-            <td class="widget-description"> A slider is user input where the user selects a value from within a given range. Sliders typically have a slider thumb that when moved will change the current value within the bar or track. The thumb must be keyboard accessible.</td>
+            <td class="widget-description"> A slider is an input where the user selects a value from within a given range. Sliders typically have a slider thumb that when moved will change the current value within the bar or track. </td>
           </tr>
           <tr>
             <th class="widget-keyboard-head" scope="row">Keyboard Interaction: </th>
             <td class="widget-keyboard"><ul>
-                <li><kbd>Right Arrow</kbd> and <kbd>Up Arrow</kbd> increase the value of the slider.</li>
-                <li><kbd>Left Arrow</kbd> and <kbd>Down Arrow</kbd> decrease the value of the slider.</li>
-                <li><kbd>Home</kbd> and <kbd>End</kbd> move to the first and last values of the slider.</li>
-                <li><kbd>Tab</kbd> into and out of the slider.</li>
-                <li><kbd>Page Up</kbd> and <kbd>Page Down</kbd> optionally increment or decrement the slider by a given amount.</li>
+                <li><kbd>Right Arrow</kbd> and <kbd>Up Arrow</kbd>: Increase the value of the slider.</li>
+                <li><kbd>Left Arrow</kbd> and <kbd>Down Arrow</kbd>: Decrease the value of the slider.</li>
+                <li><kbd>Home</kbd> and <kbd>End</kbd>: Set the slider to the first and last values of the slider.</li>
+                <li><kbd>Tab</kbd>: Moves focus into and out of the slider.</li>
+                <li><kbd>Page Up</kbd> and <kbd>Page Down</kbd> (Optional): Increment or decrement the slider by an amount larger than the step changes made by the arrow keys.</li>
                 </ul>
-              <p class="note">Focus is placed on the slider.  (The visual object that the mouse user would move, also known as the thumb.) </p>
-              <p class="note">There are cases where an author may wish up/down and home/end to move the slider thumb in the opposite direction from this note. The author can do this if they think this results in a better user experience.</p></td>
+                <ol class="note">
+              <li>Focus is placed on the slider (the visual object that the mouse user would move, also known as the thumb) </li>
+              <li>In some circumstances, an author may reverse the direction of the value change for the keys specified above, e.g., make <kbd>Up Arrow</kbd> decrease the value, if the author is certain doing so will result in a better user experience. </li>
+              </ol>
+              </td>
           </tr>
           <tr>
             <th class="widget-aria-head" scope="row">WAI-ARIA Roles, States, and Properties: </th>
