--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2643,43 +2643,44 @@ Characteristics:
       <tbody>
         <tr>
           <th class="widget-description-head" scope="row">Description: </th>
-          <td class="widget-description"><p>Visible separator between sections of a Window that is used to modify the size of the panes.</p><p>A Window Splitter can take one of two forms, namely, fixed size and variable size.
-              </p>
-        <p class="note">The group recommends unique naming of the window   splitter to avoid the confusion that could be created by multiple splitters   located on the same window. </p>
+          <td class="widget-description">
+          <p>Visible separator between sections of a Window that is used to modify the size of the panes.</p>
+          <p>A Window Splitter can take one of two forms -- fixed size and variable size. </p>
 </td>
         </tr>
         <tr>
           <th class="widget-keyboard-head" scope="row">Keyboard Interaction: </th>
           <td class="widget-keyboard">
             <ul>
-              <li><kbd>Tab</kbd> - Like other widgets, the tab key is used to move focus   to the splitter. It should appear in the normal tab order of the page. A second   tab will move focus to the next tabbable item on the page. </li>
-              <li><kbd>Left Arrow</kbd> and <kbd>Right Arrow</kbd> - In the case of a vertical splitter these keys will move the splitter to the left and to the right.</li>
-              <li><kbd>Up Arrow</kbd> and <kbd>Down Arrow</kbd> - In the case of a horizontal splitter these keys will move the splitter up and down.</li>
-              <li><kbd>Enter</kbd> - If pane controlled by the splitter is not collapsed, then collapse the pane. If the pane is collapsed then restore the splitter to its previous position. </li>
-              <li><kbd>End</kbd> Optionally moves splitter so the associated pane is the largest allowed size. </li>
-              <li><kbd>Home</kbd> Optionally moves splitter so the associated pane is the smallest allowed size. In many cases this will collapse the pane completely. </li>
-              <li><kbd>F6</kbd> Optionally is recommended to rotate through the window   panes. </li>
+              <li><kbd>Tab</kbd>: Moves focus   in to and out of the splitter. </li>
+              <li><kbd>Left Arrow</kbd> and <kbd>Right Arrow</kbd>: Move a vertical splitter left and right.</li>
+              <li><kbd>Up Arrow</kbd> and <kbd>Down Arrow</kbd>: Move a horizontal splitter up and down.</li>
+              <li><kbd>Enter</kbd>: If pane controlled by the splitter is not collapsed, then collapse the pane. If the pane is collapsed then restore the splitter to its previous position. </li>
+              <li><kbd>End</kbd> (Optional): moves splitter so the associated pane is the largest allowed size. </li>
+              <li><kbd>Home</kbd> (Optional): Moves splitter so the associated pane is the smallest allowed size. This may collapse the pane completely. </li>
+              <li><kbd>F6</kbd> (Optional): Cycle through the window   panes. </li>
             </ul>
 
-          <p class="note">Fixed size splitter simply omits implementation of the arrow keys. </p>
-          <p>&#160;</p></td>
+          <p class="note">A fixed size splitter simply omits implementation of the arrow keys. </p>
+          </td>
         </tr>
         <tr>
           <th class="widget-aria-head" scope="row">WAI-ARIA Roles, States, and Properties: </th>
-          <td class="widget-aria"><p>Uses the WAI-ARIA role <span class="role-reference">separator</span>.</p>
+          <td class="widget-aria">
             <ul>
-              <li>Most window splitters are expandable and collapsible. Ensure that the splitter's <span class="state-reference">aria-expanded</span> state is updated accordingly.</li>
-              <li>As there may be multiple splitters, use
-                  <span class="property-reference">aria-label</span>, <span class="property-reference">aria-labelledby</span>, or the <code>title</code> attribute, to label the splitter in order that an accessible name is computed by the user agent. The assistive technology can then convey to users which window splitter they are controlling.</li>
-              <li>Authors should set the <span class="property-reference">aria-controls</span> attribute of the element having the <span class="role-reference">separator</span> role. Its value should be the IDs of the panes whose sizes it controls. An assistive technology can then provide navigation among the panes.</li>
-            </ul></td>
+            <li>The splitter has role <a href="separator" class="role-reference">separator</a>.</li>
+              <li>If the splitter is expandable and collapsible, keep the splitter's <a href="#aria-expanded" class="state-reference">aria-expanded</a> state updated accordingly.</li>
+              <li>Label the splitter with <a href="aria-label" class="property-reference">aria-label</a>, <a href="aria-labelledby" class="property-reference">aria-labelledby</a>, or the <code>title</code> attribute. </li>
+              <li>Set the <a href="#aria-controls" class="property-reference">aria-controls</a> attribute of the element with role <code>separator</code> role to the IDs of the panes whose sizes it controls. </li>
+            </ul>
+            </td>
         </tr>
         <tr>
           <th class="widget-example-head" scope="row">Example: </th>
           <td class="widget-example">
           <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
             <ul>
-                <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/layout/test_BorderContainer.html" title="dijit.layout.BorderContainer Test" target="_blank" rel="nofollow">Window splitter</a></li>
+                <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/layout/test_BorderContainer.html" title="dijit.layout.BorderContainer Test" target="_blank" rel="nofollow">Dojo Window splitter</a></li>
             </ul>
           </td>
         </tr>
