Practices link fix

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2631,9 +2631,9 @@ Characteristics:
           <th class="widget-aria-head" scope="row">WAI-ARIA Roles, States, and Properties: </th>
           <td class="widget-aria">
             <ul>
-            <li>The splitter has role <a href="separator" class="role-reference">separator</a>.</li>
+            <li>The splitter has role <a href="#separator" class="role-reference">separator</a>.</li>
               <li>If the splitter is expandable and collapsible, keep the splitter's <a href="#aria-expanded" class="state-reference">aria-expanded</a> state updated accordingly.</li>
-              <li>Label the splitter with <a href="aria-label" class="property-reference">aria-label</a>, <a href="aria-labelledby" class="property-reference">aria-labelledby</a>, or the <code>title</code> attribute. </li>
+              <li>Label the splitter with <a href="#aria-label" class="property-reference">aria-label</a>, <a href="#aria-labelledby" class="property-reference">aria-labelledby</a>, or the <code>title</code> attribute. </li>
               <li>Set the <a href="#aria-controls" class="property-reference">aria-controls</a> attribute of the element with role <code>separator</code> role to the IDs of the panes whose sizes it controls. </li>
             </ul>
             </td>
